--- a/main/styles.css
+++ b/main/styles.css
@@ -18,6 +18,7 @@ body {
   background-color: #FADADD;
   overflow: hidden;
   perspective: 1000px;
+  background-image: none;
 }
 
 div.container {
@@ -1434,8 +1435,139 @@ div.container {
   font-family: fantasy;
   padding-top: 20px;
   animation: fadein 4s linear;
-  animation-delay: 4s;
-  -webkit-animation-delay: 4s;
+  animation-delay: 6s;
+  -webkit-animation-delay: 6s;
   opacity: 0;
   animation-fill-mode: forwards;
+}
+
+.next {
+  border-radius: 8px;
+  padding-top: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 21px;
+  font-family: fantasy;
+  border: none;
+  width: 100px;
+  transition: 1s;
+  color: #555555;
+  background-color: #F7A1C4;
+  margin-top: 12px;
+}
+
+.next:hover {
+  background-color: lightblue;
+  cursor: pointer;
+}
+
+.finally {
+  display: none;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  font-family: fantasy;
+  color: black;
+}
+
+.pic {
+
+  margin-top: 25px;
+  width: 300px;
+}
+
+.pic_explain {
+  margin-top: 25px;
+  margin-left: 30px;
+  margin-right: 30px;
+  text-align: center;
+}
+
+.ig {
+  width: 350px;
+  margin: 25px auto;
+  border: 1px solid #dbdbdb;
+  border-radius: 10px;
+  font-family: Arial, sans-serif;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0,0,0,0.05);
+  overflow: hidden;
+}
+
+.ig-header {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.ig-header img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.ig-header .username {
+  font-weight: bold;
+}
+
+.ig-image {
+  width: 100%;
+  height: 350px;
+  background-size: cover;
+  background-position: center;
+}
+
+.ig-actions {
+  padding: 10px;
+}
+
+.ig-actions .likes {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.ig-comment {
+  padding: 0 10px 10px;
+}
+
+.ig-comment p {
+  margin: 4px 0;
+}
+
+.ig-comment .username {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+@media only screen and (max-width: 500px) {
+  .letter {
+    bottom: 50%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .letter, .next {
+    font-size: 4vw;
+  }
+  .ig {
+    transform: scale(1.5);
+    margin: 166px auto;
+  }
+  .choice, .intro {
+    font-size: 4vw;
+  }
+}
+
+#ig-hover {
+  background-image: url('./img/5.JPG');
+  transition: 1s;
+}
+
+#ig-hover:hover {
+  background-image: url('./img/6.JPG');
+}
+
+.ig-profile {
+  object-fit: cover;
 }
