--- a/main/styles.css
+++ b/main/styles.css
@@ -1544,6 +1544,9 @@ div.container {
   .letter {
     bottom: 50%;
   }
+  .title {
+    font-size: 15px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
